# AgentGlue

./: .gitignore  BENCHMARK_PLAN.md  MORNING_MEMO_2026-03-09.md  NEXT_TODO.md  PLAN.md  PROGRESS.md  README.md  TEST_RESULT_2026-03-09.md  pyproject.toml
.github/workflows/: ci.yml
artifacts/benchmarks/2026-03-09_dedup_observability/: SUMMARY.md  concurrent_probe.events.jsonl  repo_exploration_last_run.events.jsonl  result.json
artifacts/first_test_2026-03-09/: agentglue_events.jsonl  repo_exploration_first_test.json
benchmarks/: run_benchmark.py
benchmarks/results/: 20260323-report.md  comparison_20260323_082607.json  simple_agentglue_20260323_082607.json  simple_baseline_20260323_080204.json
benchmarks/tasks/: simple.json
docs/: before-tool-call-proposal.md
examples/: recorder_export.py
openclaw-agentglue/: .gitignore  .npmignore  README.md  openclaw.plugin.json  package-lock.json  package.json
openclaw-agentglue/sidecar/: requirements.txt  server.py
openclaw-agentglue/src/: index.ts
scripts/: benchmark_repo_exploration.py  check_benchmark_result.py  repo_exploration_first_test.py
src/agentglue/: __init__.py  runtime.py
src/agentglue/core/: allocator.py  events.py  metrics.py  recorder.py
src/agentglue/middleware/: dedup.py  shared_memory.py
tests/: test_sidecar_benchmark.py  test_smoke.py
