[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentglue"
version = "0.1.0"
description = "Runtime middleware for multi-agent systems — dedup, shared memory, rate coordination, and conflict prevention"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "brickee"}]
license = {text = "MIT"}
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
